--- a/GeoQuizChallenge/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuizChallenge/app/src/main/res/layout/activity_quiz.xml
@@ -10,11 +10,10 @@
     >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/question_text"
         />
 
     <LinearLayout
@@ -36,6 +35,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/question_button_false"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <ImageButton
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+           android:src="@drawable/arrow_left"
+            />
+
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_right"
             />
 
     </LinearLayout>
