--- a/GeoQuizChallenge/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuizChallenge/app/src/main/res/layout/activity_quiz.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".QuizActivity"
+    tools:context=".Views.QuizActivity"
     >
 
     <TextView
-        android:id="@+id/question_text_view"
+        android:id="@+id/questionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
@@ -23,18 +23,18 @@
         >
 
         <Button
-            android:id="@+id/question_button_true"
+            android:id="@+id/questionButtonTrue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/question_button_true"
+            android:text="@string/button_true"
             android:textAllCaps="true"
             />
 
         <Button
-            android:id="@+id/question_button_false"
+            android:id="@+id/questionButtonFalse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/question_button_false"
+            android:text="@string/button_false"
             />
 
     </LinearLayout>
@@ -46,14 +46,14 @@
         >
 
         <ImageButton
-            android:id="@+id/prev_button"
+            android:id="@+id/prevButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:src="@drawable/arrow_left"
+            android:src="@drawable/arrow_left"
             />
 
         <ImageButton
-            android:id="@+id/next_button"
+            android:id="@+id/nextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_right"
