--- a/GeoQuizChallenge/app/src/main/res/layout-land/activity_quiz.xml
+++ b/GeoQuizChallenge/app/src/main/res/layout-land/activity_quiz.xml
@@ -13,12 +13,14 @@
         android:id="@+id/questionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="24dp"
         />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal"
         >
 
@@ -42,6 +44,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal"
         >
 
