--- a/GeoQuizChallenge/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuizChallenge/app/src/main/res/layout/activity_quiz.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:text="@string/cheat_button"
+        android:text="@string/cheat"
         />
 
     <LinearLayout
